# PreludeEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-linux  build-macos  build-windows.bat
docs/: BUILDING.md  TECH.md
src/Config/: AppConfig.h
src/Engine/: AudioPlayer.cpp  AudioPlayer.h  Controller.h  Engine.cpp  Engine.h  EngineSettings.h  Input.h  README.md  RuntimeMain.cpp
src/Game/: main.cpp
src/Game/Debug/: DebugLogger.h  PianoRollRenderer.cpp  PianoRollRenderer.h
src/Game/Music/: AsyncSongRender.cpp  AsyncSongRender.h  MusicClipManager.cpp  MusicClipManager.h  RenderedSequence.h
src/Game/Scenes/: EndScene.cpp  EndScene.h  GameplayScene.cpp  GameplayScene.h  IntroScene.cpp  IntroScene.h  Scene.h  SceneManager.cpp  SceneManager.h
src/Game/UI/Core/: GameUI.cpp  GameUI.h
src/Game/UI/HUD/: GameplayHUD.cpp  GameplayHUD.h  HUDSkin.h  HUDSkinningGuide.md
src/Game/UI/HUD/Pools/: Ghosts.cpp  Ghosts.h  Particles.cpp  Particles.h
src/Game/UI/HUD/Skins/: HUDSkinSinglePlayer.h  HUDSkinTemplate.h  HUDSkinTwoPlayer.h
src/Gameplay/: GameLogic.h  GameState.h  HUDMode.h  Lanes.h  NotePool.h  RunResults.cpp  RunResults.h  TimingUtils.h
src/Gameplay/GameLogic/: Constants.h  HUD.cpp  Input.cpp  Internal.h  Spawn.cpp
src/Rhythm/: RhythmSettings.h
src/Rhythm/Audio/IO/: WavWriter.cpp  WavWriter.h
src/Rhythm/Audio/Music/DSP/: BufferUtils.h  TransientUtils.h
src/Rhythm/Audio/Music/Events/: EventSequence.h  Midi.h  NoteBuilder.h  NoteEvent.h
src/Rhythm/Audio/Music/Instruments/: DrumKit.h  NesInstruments.h
src/Rhythm/Audio/Music/Orchestration/: ChordHelpers.h  ChordOrchestrator.h  ChordPattern.h  ChordSequence.h  DrumPattern.h  GameplaySongs.h  MelodyBuilder.cpp  MelodyBuilder.h  MusicalContext.h  NesMelody.h  NoteSpec.h  PatternLayer.h  SectionBuilder.h  SequenceBuilder.h  TestSequences.h
src/Rhythm/Audio/Music/Render/: EventSequenceRenderer.cpp  EventSequenceRenderer.h  MixSettings.h  RenderSettings.h
src/Rhythm/Audio/Synth/Primitives/: EnvelopeFilter.h  Oscillator.h
src/Rhythm/Audio/Synth/Voices/: KickSynth.h  NoiseSynth.h  SquareSynth.h  TriangleSynth.h
src/Rhythm/Math/: MathUtils.h
src/Rhythm/Targets/: TimingTargetMode.h  TimingTargets.cpp  TimingTargets.h
src/Rhythm/Transport/: MusicTransport.cpp  MusicTransport.h
src/Rhythm/Util/: BeatHash.h
